syntax = "proto3";

package kessel.inventory.v1beta2.resources;

import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";

import "kessel/inventory/v1beta2/resources/resource_label.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta2/resources";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta2.resources";

message Metadata {
  // Kessel Asset Inventory generated identifier.
  string id = 3355 [ (google.api.field_behavior) = OUTPUT_ONLY ];

  // The type of the Resource
  string resource_type = 442752204
      [ json_name = "resource_type", (google.api.field_behavior) = OUTPUT_ONLY ];

  // Date and time when the inventory item was first reported.
  google.protobuf.Timestamp created_at = 3400
      [ json_name = "created_at", (google.api.field_behavior) = OUTPUT_ONLY ];

  // Date and time when the inventory item was last updated.
  google.protobuf.Timestamp updated_at = 3401
      [ json_name = "updated_at", (google.api.field_behavior) = OUTPUT_ONLY ];

  // Date and time when the inventory item was deleted.
  google.protobuf.Timestamp deleted_at = 3402
      [ json_name = "deleted_at", (google.api.field_behavior) = OUTPUT_ONLY ];

  // The org id in which this resource is a member for access control.  A
  // resource can only be a member of one org.
  string org_id = 3500 [ json_name = "org_id" ];

  // The workspace id in which this resource is a member for access control.  A
  // resource can only be a member of one workspace.
  string workspace_id = 3501 [ json_name = "workspace_id" ];

  repeated ResourceLabel labels = 3552281;
}
